# daisy_llm

./: LICENSE  README.md  configs.yaml  daisy.db  main.py  pyproject.toml  setup.py
examples/: main.py
modules/: TTSGoogle.py
modules/Daisy/: Daisy.py  DaisyMethods.py
modules/Porcupine/: Porcupine.py
modules/WeatherNoaaNl/: WeatherNoaaNl.py
src - Copy/daisy_llm/: Chat.py  CommandHandlers.py  ContextHandlers.py  ModuleLoader.py  SoundManager.py  __init__.py
src/daisy_llm/: Chat.py  ChatSpeechProcessor.py  CommandHandlers.py  ConnectionStatus.py  ContextHandlers.py  DaisyCore.py  InputManager.py  ModuleLoader.py  SoundManager.py  __init__.py  chat.py  connection_pool.py  context_handlers.py  input_manager.py  text.py
src/daisy_llm_myrakrusemark/: Chat.py  ChatSpeechProcessor.py  ContextHandlers.py  ModuleLoader.py  SoundManager.py  __init__.py
tests/: pytests.py
utils/: command_tester.py  create_command_embeddings.py  reinstall_daisy_llm.py
utils/output/: module-Reddit.json  module-ask.json  module-browse web.json  module-calculate.json  module-chained.json  module-computer resources.json  module-save text.json  module-search web.json  module-set location.json  module-weather.json
