[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "daisy_llm"
version = "0.0.4"
authors = [
    { name = "Myra Krusemark", email = "daisy_llm@myrakrusemark.com" }
]
description = "A toolkit for working and conversing with large language models."
readme = "README.md"
requires-python = ">=3.11.1"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
"aiohttp==3.8.4",
"aiosignal==1.3.1",
"appier==1.30.1",
"asgiref==3.6.0",
"assemblyai==0.2.7",
"async-timeout==4.0.2",
"attrs==23.1.0",
"beautifulsoup4==4.12.2",
"cachetools==5.3.0",
"certifi==2022.12.7",
"cffi==1.15.1",
"charset-normalizer==3.1.0",
"click==8.1.3",
"colorama==0.4.6",
"comtypes==1.1.14",
"dataclasses-json==0.5.7",
"decorator==5.1.1",
"Django==4.2",
"django-admin-soft-dashboard==1.0.12",
"elevenlabslib==0.4.2",
"frozenlist==1.3.3",
"future==0.18.3",
"geocoder==1.38.1",
"geographiclib==2.0",
"google==3.0.0",
"google-api==0.1.12",
"google-api-core==2.11.0",
"google-api-python-client==2.86.0",
"google-auth==2.17.3",
"google-auth-httplib2==0.1.0",
"google-cloud-texttospeech==2.14.1",
"google-search-results==2.4.2",
"googleapis-common-protos==1.59.0",
"greenlet==2.0.2",
"grpcio==1.54.0",
"grpcio-status==1.54.0",
"httplib2==0.22.0",
"humanize==4.6.0",
"idna==3.4",
"importlib==1.0.4",
"joblib==1.2.0",
"langchain==0.0.146",
"marshmallow==3.19.0",
"marshmallow-enum==1.5.1",
"multidict==6.0.4",
"mypy-extensions==1.0.0",
"nltk==3.8.1",
"numexpr==2.8.4",
"numpy==1.24.2",
"openai==0.27.4",
"openapi-schema-pydantic==1.2.4",
"packaging==23.1",
"proto-plus==1.22.2",
"protobuf==4.22.3",
"psutil==5.9.5",
"pvporcupine==2.1.0",
"pvrecorder==1.1.1",
"pyasn1==0.5.0",
"pyasn1-modules==0.3.0",
"PyAudio==0.2.13",
"pycparser==2.21",
"pydantic==1.10.7",
"pydub==0.25.1",
"pyparsing==3.0.9",
"pypiwin32==223",
"pyttsx3==2.90",
"pywin32==306",
"PyYAML==6.0",
"ratelim==0.1.6",
"regex==2023.3.23",
"requests==2.28.2",
"rsa==4.9",
"ruamel.yaml==0.17.21",
"simpleaudio==1.0.4",
"six==1.16.0",
"sounddevice==0.4.6",
"soundfile==0.12.1",
"soupsieve==2.4.1",
"SQLAlchemy==1.4.47",
"sqlparse==0.4.4",
"tenacity==8.2.2",
"tqdm==4.65.0",
"typing==3.7.4.3",
"typing-inspect==0.8.0",
"typing_extensions==4.5.0",
"tzdata==2023.3",
"uritemplate==4.1.1",
"urllib3==1.26.15",
"websockets==11.0.2",
"whitenoise==6.4.0",
"yarl==1.8.2"
]

[project.urls]
"Homepage" = "https://github.com/myrakrusemark/daisy_llm"
"Bug Tracker" = "https://github.com/myrakrusemark/daisy_llm/issues"
