[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "daisy_llm"
version = "0.0.5"
authors = [
    { name = "Myra Krusemark", email = "daisy_llm@myrakrusemark.com" }
]
description = "A toolkit for working and conversing with large language models. Featuring tokenized sentence queueing for TTS."
readme = "README.md"
requires-python = ">=3.11.1"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
"aiohttp",
"aiosignal",
"async-timeout",
"asyncio",
"attrs",
"certifi",
"charset-normalizer",
"click",
"colorama",
"comtypes",
"frozenlist",
"idna",
"joblib",
"multidict",
"nltk",
"numpy",
"openai",
"PyAudio",
"pydub",
"pypiwin32",
"pyttsx3",
"pywin32",
"PyYAML",
"regex",
"requests",
"ruamel.yaml",
"setuptools",
"simpleaudio",
"tqdm",
"urllib3",
"websockets",
"yarl",
"torch",
"transformers",
"scipy",
"scikit-learn"
]

[project.urls]
"Homepage" = "https://github.com/myrakrusemark/daisy_llm"
"Bug Tracker" = "https://github.com/myrakrusemark/daisy_llm/issues"
